--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yermakov11.github.io/MirageMovies",
+  "homepage": "https://yermakov11.github.io/mirage-movies",
   "name": "movies",
   "private": true,
   "version": "0.0.0",
